evdev: Remove output destroy notifier on device destroy

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=73895